2017-01-13  Karl Berry  <karl@tug.org>

	* ofm2opl.man,
	* opl2ofm.man,
	* ovf2ovp.man,
	* ovp2ovf.man: specify section 1. Report from Julian Gilbey.

2016-04-14  Karl Berry  <karl@freefriends.org>

	* ofm2opl.man,
	* ovf2ovp.man: document current options, i.e., from the omfonts
	(../omegafonts) implementation.  Akira re-implemented the web
	-charcode-format option in r39877, ca.27 Feb 2016 10:23:20.

2016-03-08  Karl Berry  <karl@tug.org>

	* ttf2afm.man: document -m.  tldoc mail from esr, 7 Mar 2016 09:34:07.

2015-06-16  Karl Berry  <karl@tug.org>

	* *.man: remove spurious "for troff" and "for nroff" non-comments.
	https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=663157
	Report from Tom Yan, tex-live mail 2 Jun 2015 03:28:32.
	Also replace pseudo-smallcaps M\s-2ETAFONT\s0 with standard "Metafont".
	* *.min: remove these long-gone programs.
	* Makefile.am (EXTRA_DIST): remove *.min.
	(man1_links) [TEX]: include initex.
	(man1_links) [MF]: include inimf.

2015-04-27  Karl Berry  <karl@tug.org>

 	* aleph.man,
	* dvitomp.man,
	* latex.man,
	* luatex.man,
	* mf.man,
	* mpost.man,
	* ofm2opl.man,
	* opl2ofm.man,
	* ovf2ovp.man,
	* ovp2ovf.man,
	* pdfetex.man,
	* pdftex.man,
	* pdftosrc.man,
	* tex.man,
	* ttf2afm.man: version, url, et al. updates.

2014-12-02  Karl Berry  <karl@tug.org>

	* patgen.man: Kuiken's ushyphmax.tex not in TL for some years.
	(Report from Mojca.)

2011-04-12  Taco Hoekwater  <taco@metapost.org>

	* luatex.man: update to version 0.70
	
2011-04-05  Taco Hoekwater  <taco@metapost.org>

	* mpost.man: update to version 1.504
	* dvitomp.man: update to version 1.504

2011-04-05  Taco Hoekwater  <taco@metapost.org>

	* mpost.man: update to version 1.503

2011-03-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* aleph.man, etex.man, luatex.man, mf.man, pdftex.man,
	tangle.man, tex.man: Drop useless '.rb' macros.

2011-02-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (man1_links): Add texlua and texluac.
